tests/rosetta/out/Java/cartesian-product-of-two-or-more-lists-4.error
javac error: exit status 1
/tmp/TestMochiToJavacartesian-product-of-two-or-more-lists-41555211713/001/CartesianProductOfTwoOrMoreLists4.java:39: error: cannot find symbol
    static List<List<Integer>> cartN(any lists) {
                                     ^
  symbol:   class any
  location: class CartesianProductOfTwoOrMoreLists4
/tmp/TestMochiToJavacartesian-product-of-two-or-more-lists-41555211713/001/CartesianProductOfTwoOrMoreLists4.java:10: error: incompatible types: String cannot be converted to Number
            s = s + ((Number)String.valueOf(xs.get(i))).doubleValue();
                                           ^
/tmp/TestMochiToJavacartesian-product-of-two-or-more-lists-41555211713/001/CartesianProductOfTwoOrMoreLists4.java:23: error: incompatible types: String cannot be converted to Number
            s = s + ((Number)listStr(lst.get(i))).doubleValue();
                                    ^
/tmp/TestMochiToJavacartesian-product-of-two-or-more-lists-41555211713/001/CartesianProductOfTwoOrMoreLists4.java:51: error: incompatible types: List<Integer> cannot be converted to List<List<Integer>>
            for (List<Integer> x : (List<List<Integer>>)a.get(last)) {
                                                             ^
/tmp/TestMochiToJavacartesian-product-of-two-or-more-lists-41555211713/001/CartesianProductOfTwoOrMoreLists4.java:53: error: incompatible types: List<Integer> cannot be converted to Integer
                row.add(x);
                        ^
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
5 errors
